syntax = "proto3";
package auth.v1;
// 生成package为authpb
option go_package = "coolcar/auth/api/gen/v1;authpb";

message LoginRequest {
    string code = 1;
}

message LoginResponse {
    // oauth2字段
    string access_token = 1;
    int32 expires_in = 2;
}

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Ping(LoginRequest) returns (LoginResponse) {}
}
